fix: fix flex vertical align on IE11

--- a/public/app.css
+++ b/public/app.css
@@ -50,6 +50,13 @@ body {
   min-height: 150px;
 }
 
+.content::after {
+  content: '';
+  display: block;
+  min-height: inherit;
+  font-size: 0;
+}
+
 .content:nth-child(2n + 1) {
   background: #fff;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.16);
